themes/main/assets/css/style.css
/* ... */
    .nav-link-arrow::after {
        content: "";
        width: 0;
        height: 0;
        border-style: solid;
        border-width: 4px 0 4px 6px;
        border-color: transparent transparent transparent #fff;
        position: absolute;
        top: 12px;
        left: 50%;
        transform: translate3d(-50%, 0, 0);
    }

    .dropdown-menu li a:hover .nav-link-arrow {
        transform: translate3d(0, 0, 0);
    }

    .dropdown-menu li a:hover .nav-link-text {
        transform: translateX(-5%);
    }

    .nav-open .menu-items {
        gap: 0;
    }

    .nav-open .menu-items span:nth-child(1) {
        transform: rotate(45deg) translate(1.5px, 1.5px);
    }

    .nav-open .menu-items span:nth-child(2) {
        opacity: 0;
        transform: scaleX(0);
    }

    .nav-open .menu-items span:nth-child(3) {
        transform: rotate(-45deg) translate(1.5px, -1.5px);
    }

    .nav-item .main-link {
        cursor: auto;
    }
    .home-intro-overlay{
        position: absolute;
        width: 100%;
        height: 100%;
        inset: 0;
        background-color: var(--color-black);
        pointer-events: none;
        z-index: 100;
    }
    .hero-container {
        height: var(--vh-100);
        background-color: var(--color-black);
        position: relative;

    }
    
    .hero-text {
        position: absolute;
        top: 0;
        left: 0;
        z-index: 10;
        padding: var(--header-height) var(--page-padding) 0;
        color: var(--color-white);
        font-size: var(--font-size-xs);
        max-width: 250px;
        pointer-events: none;

    }

    .swiper {
        position: relative;
        height: var(--vh-100);
        z-index: 1;
    }

    .swiper-wrapper {
        height: 100%;
    }

    .swiper-slide {
        position: relative;
        height: 100%;
    }

    .hero-full-container {
        display: grid;
        grid-template-columns: repeat(24, 1fr);
        grid-template-rows: repeat(2, 1fr);
        position: absolute;
        left: 0;
        top: 0;
        height: 100%;
        width: 100%;

    }

    .grid-containers {
        color: var(--color-white);
    }

    .custom-container-1 {
        position: relative;
        grid-column: span 18;
        grid-row-start: 1;
        grid-row-end: 3;
    }

    .custom-container-2 {
        position: relative;
        grid-column: span 6;
        grid-row-start: 1;
        overflow: hidden;
    }

    .custom-container-3 {
        position: relative;
        grid-column: span 6;
        grid-row-start: 2;
    }

    .video-container {
        position: relative;
        width: 100%;
        height: 100%;
        overflow: hidden;
    }

    .video-container video {
       
        width: 100%;
        height: 100%;
        object-fit: cover;
       
    }

    .video-container-small {
        overflow: hidden;
        position: relative;
        width: 100%;
        height: 100%;

    }

    .video-container-small video {
        width: 100%;
        height: 100%;
        object-fit: cover;

    }

    .zoomed-in {
        transform: scale(3);
        transform-origin: center center;
    }

    .header {
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
        max-width: 800px;
        width: 100%;
        padding: var(--page-padding);
        z-index: 1;

    }

    .header a {
        text-decoration: none;
        color: var(--color-white);
        display: flex;
        align-items: flex-start;
        gap: 5px;
        transition: all 0.2s ease;
        position: relative;
        z-index: 2;
    }

    .header a:hover {
        transform: translateX(-0.5%);
    }

    .header p {
        margin: 0;
    }

    .anchor-index {
        padding-top: 2px;
        font-size: var(--font-size-xs);
    }

    .anchor-title {
        font-size: var(--font-size-l);
        font-weight: 900;
        font-family: var(--font-family-title);
        text-transform: uppercase;
    }

    .sub-header {
        position: absolute;
        top: 0;
        left: 0;
        padding: 30px 20px;
        line-height: 0;
        font-size: var(--font-size-xs);
        text-transform: uppercase;
        z-index: 1;
    }

    .container-arrows {
        position: absolute;
        bottom: var(--page-padding);
        left: var(--page-padding);
        width: calc(100% - var(--page-padding) - var(--page-padding));
        color: var(--color-white);
        display: flex;
        align-items: center;
        gap: 10px;
        z-index: 97;

    }

    .swiper-arrows {
        display: flex;
        align-items: center;
        border: 1px solid var(--color-white);
    }

    .arrows {
        padding: 1px 20px;
        transition: background-color 0.1s ease;
        cursor: pointer;

        width: 100%;
    }

    .arrow-right {
        border-left: 1px solid var(--color-white);
    }

    .slide-number {
        font-size: var(--font-size-xs);
    }

    .arrows:hover {
        background-color: var(--color-white);

        .arrow-fill {
            color: var(--color-black);
        }
    }

    .panel {
        overflow: hidden;
        position: relative;
        perspective: 3000px;
    }

    .panel-inner {
        position: relative;
        width: 100%;
        height: 100%;
        transform-style: preserve-3d;
    }

    .panel-face {
        position: absolute;
        top: 0;
        z-index: 0;
        left: 0;
        width: 100%;
        height: 100%;
        overflow: hidden;

    }

    .home-section{
        position: relative;
        min-height: 100vh;
    }
    .svg-container{
        position: relative;
        height: 100%;;
    }
    .primary-header{
        width: 100%;
        height: auto;
        padding: var(--page-padding) var(--page-padding) var(--page-padding);
       position: relative;
    }
    .primary-header h1{
        font-size: var(--font-size-xxl);
    }
/* ... */

